<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Savanna</string>
    <string name="search_hint">Search or enter URL</string>
    <string name="new_tab">New Tab</string>
    <string name="close_tab">Close Tab</string>
    <string name="tabs">Tabs</string>
    <string name="history">History</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="privacy_report">Privacy Report</string>
    <string name="reload">Reload</string>
    <string name="go_back">Go Back</string>
    <string name="go_forward">Go Forward</string>
    <string name="share">Share</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_bookmarks">Clear Bookmarks</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="search_engine">Search Engine</string>
    <string name="block_trackers">Block Trackers</string>
    <string name="block_ads">Block Ads</string>
    <string name="javascript">JavaScript</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="tab_mode">Tab Mode</string>
    <string name="homepage">Homepage</string>
    <string name="clear_on_exit">Clear Data on Exit</string>
    <string name="block_popups">Block Pop-ups</string>
    <string name="do_not_track">Send Do Not Track</string>
    <string name="trackers_blocked">Trackers Blocked</string>
    <string name="no_history">No browsing history yet</string>
    <string name="no_bookmarks">No bookmarks yet</string>
    <string name="privacy">Privacy</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="compact">Compact</string>
    <string name="bottom_tabs">Bottom</string>
    <string name="nav_back">Back</string>
    <string name="nav_forward">Forward</string>
    <string name="pick_date">Date</string>
    <string name="pick_time">Time</string>
    <string name="reader_mode">Reader Mode</string>
    <string name="find_in_page">Find in Page</string>
    <string name="reader_on">Reader</string>
    <string name="reader_off">Original</string>
    <string name="no_results">No results</string>
</resources>
